[package]
name = "rust-labs"
version = "0.1.0"
authors = ["zhixiong.zhu <zhixiong.zhu@qq.com>"]
edition = "2018"
description = "rust training lesson"
license = "MIT"
homepage = "https://github.com/zishon/rust-labs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
